feat: Add LDAP authentication support with dual authentication modes
- Add comprehensive LDAP authentication with Active Directory support
- Implement automatic authentication method detection (LDAP vs legacy)
- Add LDAP configuration via environment variables and YAML config
- Support both Docker and non-Docker deployment scenarios
- Add authorization vs authentication error distinction
- Simplify login UI with intelligent username field visibility
- Add LDAP group and user filtering capabilities
- Include comprehensive documentation and installation scripts
- Remove hardcoded Docker ENTRYPOINT for template system compatibility

LDAP Features:
- Server connection with optional TLS support
- Service account binding with secure password handling
- Flexible user filtering with customizable LDAP queries
- Group-based and user-based access control
- Fallback to legacy password authentication

Breaking Changes: None - fully backward compatible

--- a/docker-compose/.env.example
+++ b/docker-compose/.env.example
@@ -17,3 +17,22 @@ RTTYS_HTTP_PROXY_PORT=10443
 TURN_PORT=3478
 TURN_USER=glkvmcloudwebrtcuser
 TURN_PASS=AnotherS3cret
+
+# LDAP Authentication (Optional)
+LDAP_ENABLED=false
+LDAP_SERVER=your-ldap-server.com
+LDAP_PORT=389
+LDAP_USE_TLS=false
+LDAP_BIND_DN=cn=service-account,ou=users,dc=company,dc=com
+LDAP_BIND_PASSWORD=service-password
+LDAP_BASE_DN=ou=users,dc=company,dc=com
+
+# User filter examples for different LDAP implementations:
+# Active Directory: (&(objectClass=person)(sAMAccountName=%s))
+# OpenLDAP: (&(objectClass=inetOrgPerson)(uid=%s))
+# FreeIPA: (&(objectClass=person)(uid=%s))
+# Generic LDAP: (uid=%s)
+LDAP_USER_FILTER=(uid=%s)
+
+LDAP_ALLOWED_GROUPS=admins,operators
+LDAP_ALLOWED_USERS=user1,user2
